# brainrot-mcp

./: .gitignore  CLAUDE.md  README.md  SETUP.md  validate_setup.py
backend/: cleanup_tags.py  database.py  models.py  requirements.txt  server.py
docs/: TODO.md
engineering-docs/.obsidian/: workspace.json
engineering-docs/00-north-star/: 01-PRD-brainrot-mcp.md  02-SPEC-brainrot-tech-stack.md
engineering-docs/01-brainstorming/: 01-IDEA-brainrot-PRD.md  03-IDEA-build-plan-outline.md  04-SPEC-project-specs.md  hackathon-agents-and-commands.md
engineering-docs/03-how-to/: tags-usage.md
engineering-docs/99-archived/: CLAUDE.md  initial-scope.md
mcp_server/: pyproject.toml  requirements.txt  server.py
mcp_server/src/brainrot_mcp/: __init__.py  __main__.py
planning-notes-mcp/.obsidian/: workspace.json
planning-notes-mcp/01-brainstorming/: hackathon-agents-and-commands.md
